--- a/sloam/params/ouster.yaml
+++ b/sloam/params/ouster.yaml
@@ -1,5 +1,5 @@
 sloam:
-  cloud_topic: /os_cloud_node/points
+  cloud_topic: /cloud_registered
   odom_topic: /Odometry
   debug_mode: true
   do_destagger: false
